--- a/index.html
+++ b/index.html
@@ -35,12 +35,21 @@
           <a href="#"><img src="assets/images/the dasturchi.svg" alt="" /></a>
         </div>
         <div class="right standart-flex">
-          <div class="language main-font"><h2>UZ</h2></div>
+          <a href="#" class="language main-font disable">EN</a>
           <div class="toggle standart-flex">
             <img src="assets/images/Frame 294.svg" alt="links" />
           </div>
         </div>
       </div>
     </header>
+    <div class="hero title">
+      Here you can find cs problem solutions, blogs and my projects.
+      <div class="btn-group">
+        <button class="btn-regular">
+          <img src="assets/icons/down.svg" alt="" /> Download CV
+        </button>
+        <button>See Projects</button>
+      </div>
+    </div>
   </body>
 </html>
