hero section buttons

--- a/index.html
+++ b/index.html
@@ -25,9 +25,6 @@
   </head>
   <body>
     <header>
-      <!-- <div class="green standart-flex">
-        <img src="assets/images/Ellipse 106.svg" alt="" />
-      </div> -->
       <div class="main-bg"></div>
       <div class="glass"></div>
       <div class="navbar standart-flex">
@@ -36,15 +33,15 @@
         </div>
         <div class="right standart-flex">
           <a href="#" class="language main-font disable">EN</a>
-          <div class="toggle standart-flex">
+          <button class="toggle standart-flex" id="menubar">
             <img src="assets/images/Frame 294.svg" alt="links" />
-          </div>
+          </button>
         </div>
       </div>
     </header>
     <div class="hero title">
-      Here you can find cs problem solutions, blogs and my projects.
-      <div class="btn-group">
+      Here you can find out solutions for CS problems, blogs, projects.
+      <div class="btn-group standart-flex">
         <button class="btn-regular">
           <img src="assets/icons/down.svg" alt="" /> Download CV
         </button>
