--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     />
     <title>The Dasturchi</title>
     <link rel="stylesheet" href="static/CSS/styles.css" />
+    <link rel="stylesheet" href="static/CSS/links.css" />
     <script src="static/JS/main.js" defer></script>
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
@@ -32,21 +33,49 @@
           <a href="#"><img src="assets/images/the dasturchi.svg" alt="" /></a>
         </div>
         <div class="right standart-flex">
-          <a href="#" class="language main-font disable">EN</a>
-          <button class="toggle standart-flex" id="menubar">
+          <a href="#" class="language main-font disable">UZ</a>
+          <div class="toggle standart-flex" id="menubar">
             <img src="assets/images/Frame 294.svg" alt="links" />
-          </button>
+          </div>
         </div>
       </div>
     </header>
-    <div class="hero title">
-      Here you can find out solutions for CS problems, blogs, projects.
-      <div class="btn-group standart-flex">
-        <button class="btn-regular">
-          <img src="assets/icons/down.svg" alt="" /> Download CV
-        </button>
-        <button>See Projects</button>
+    <div class="container">
+      <div class="hero title">
+        Here you can find out solutions for CS problems, blogs, projects.
+        <div class="btn-group">
+          <button class="btn-regular">
+            <img src="assets/icons/down.svg" alt="" /> Download CV
+          </button>
+          <button>See Projects</button>
+        </div>
       </div>
     </div>
+    <nav id="nav-container" class="nav-container">
+      <div class="navlinks">
+        <a href="#home">Home</a>
+        <a href="#blogs">Blogs</a>
+        <a href="#projects">Projects</a>
+        <a href="#contacts">Contacts</a>
+        <div class="line"></div>
+        <div class="socials">
+          <a title="Github" href="#github"
+            ><img src="assets/icons/github.svg" alt="github"
+          /></a>
+
+          <a title="Telegram" href="#github"
+            ><img src="assets/icons/telegram.svg" alt="telegram"
+          /></a>
+
+          <a title="Facebook" href="#facebook"
+            ><img src="assets/icons/facebook.svg" alt="github"
+          /></a>
+
+          <a title="Linkedin" href="#linkedin"
+            ><img src="assets/icons/linkedin.svg" alt="linkedin"
+          /></a>
+        </div>
+      </div>
+    </nav>
   </body>
 </html>
